tests/fixtures/invalid/pow_int_bool_set.py
# Cannot call pow() with Int, Bool, Set[int]
x = pow(1, True, {1, 2, 3})
